trunk/Archive2/69/8662e481c35e9b/output
main.cpp:3:17: error: unknown type name ‘doesntexist’
 void myfunction(doesntexist argument)
                 ^
main.cpp: In function ‘main’:
main.cpp:11:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
