trunk/Archive2/69/8662e481c35e9b/main.cpp


void myfunction(doesntexist argument)
{
}


int main()
{

}
